<resources>
    <string name="app_name">Smart Notes</string>
    <string name="create_note">Create a Note</string>
    <string name="note_title">Note Title</string>
    <string name="note_text">Note Text</string>
    <string name="note_importance">Note Importance</string>
    <string name="importance_high">High Importance</string>
    <string name="importance_average">Average Importance</string>
    <string name="importance_low">Low Importance</string>
    <string name="importance_undefined">Undefined Importance</string>
    <string-array name="importanceItems">
        <item>Undefined Importance</item>
        <item>High Importance</item>
        <item>Average Importance</item>
        <item>Low Importance</item>
    </string-array>
    <string-array name="socialNetworksItems">
        <item>Vkontakte</item>
        <item>Twitter</item>
    </string-array>
    <string name="add_coordinates">Add a Location</string>
    <string name="add_image">Add an Image</string>
    <string name="save">Save</string>
    <string name="no_title">No Title</string>
    <string name="image_preview">Image preview</string>
    <string name="edit_note">Edit the Note</string>
    <string name="remove_note">Remove the Note</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="share_note">Share the Note</string>
    <string name="show_on_map">Show on the Map</string>
    <string name="action_edit_note">Edit Note</string>
    <string name="action_export_to_text">Export to Text</string>
    <string name="action_remove_note">Remove the Note</string>
    <string name="action_share_note">Share the Note</string>
    <string name="action_create_note">Create a Note</string>
    <string name="no_changes">No changes commited</string>
    <string name="note_updated">Note\'s been updated</string>
    <string name="note_removed">Note\'s been removed</string>
    <string name="export_success">Successfully exported</string>
    <string name="export_fail">Failed to export</string>
    <string name="note_image_preview">Preview of the Note Image</string>
    <string name="change_image">Change the Image</string>
    <string name="remove_image">Remove the Image</string>
    <string name="action_share_vk">Vkontakte</string>
    <string name="action_share_facebook" translatable="false">Facebook</string>
    <string name="action_share_twitter" translatable="false">Twitter</string>
    <integer name="com_vk_sdk_AppId">6094490</integer>
    <string name="dialog_choose_social_network">Make a choice</string>
    <string name="sharing_error">An error occured</string>
    <string name="sharing_cancel">Canceled by the user</string>
    <string name="sharing_complete">Successfully shared</string>
    <string name="vk_auth_error">Authorization error</string>
    <string name="vk_auth_success">Successfully signed in</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false">k26nLJexsCLLA62mF0mQGP0R0</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false">DNcqgI8ZHePJ2HnXg2wqaIA3CIO8Gv4Fkao7qwOR2l87OHamYq</string>
    <string name="no_notes">No Notes</string>
    <string name="note_no_text">Add some text to the note!</string>
</resources>
