<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ViewNoteActivity">

    <item
        android:id="@+id/action_edit_note"
        android:title="@string/action_edit_note"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_remove_note"
        android:title="@string/action_remove_note"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_export_to_text"
        android:title="@string/action_export_to_text"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_share_note"
        android:title="@string/action_share_note"
        app:showAsAction="ifRoom"/>

</menu>